<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_bottom"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/order_bottom"
        android:icon="@drawable/order"
        android:title="@string/orders"/>
    <!--
    <item
        android:id="@+id/chat_bottom"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        android:title="@string/chat"/>
        -->
    <item
        android:id="@+id/profile_bottom"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"/>
    <item
        android:id="@+id/noti_bottom"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"/>
</menu>