<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dlg_white"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_change_email"
            android:textSize="17sp"
            android:textColor="#FF242121"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editOldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_old_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_new_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_red"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

</LinearLayout>