<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_vehicle_ownership"
            android:textSize="20sp"
            android:textColor="#FF242121"/>
        <com.cns.captaindelivery.widgets.ClickEffectImageView
            android:id="@+id/imgBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_prev"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFdbdbdb"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="10dp"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_full_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editFullAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_full_address"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/editCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_country"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#FFb8b8b8"
                        android:textColor="#FF363f45"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    >
                    <EditText
                        android:id="@+id/editCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_city"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="#FFb8b8b8"
                        android:textColor="#FF363f45"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_company_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_phonenumber"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editRegistrationNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_registration_no"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editVinNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_vin_number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editIgnitionKeyNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_ignition_key_number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFb8b8b8"
                    android:textColor="#FF363f45"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_continue"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@drawable/btn_red"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>




</LinearLayout>

