<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dlg_white"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_forgot_password"
            android:textSize="17sp"
            android:textColor="#FF242121"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            />
        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#FF222222"
            android:padding="10dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEditCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/editCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_verification_code"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/editPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/editPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_red"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

</LinearLayout>