<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dlg_white"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/txtDlgTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_change_phone_number"
            android:textSize="17sp"
            android:textColor="#FF242121"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutOldPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editOldPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_old_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_code"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFbcbcbc"
                    android:textColor="#FF000000"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:id="@+id/ImageViewSep"
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:src="#FF9c9c9c"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editNewPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_new_phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFbcbcbc"
                    android:textColor="#FF000000"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_red"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

</LinearLayout>